# TruePresenceESE

./: .dockerignore  .env.local  .gitignore  CONTRIBUTING.md  ESE_paper.md  LICENSE  MANIFESTO.md  MILESTONE_1_0_0.md  MULTI_TENANCY_SETUP.md  README.md  RECOMMENDATIONS.md  TENANT_CONFIGURATION.md  config.yaml  framework_overview.md  main.py  pyproject.toml  railway.toml  requirements.txt  seed_admin.py  server.py  start_ese.sh  test_stream.py  workflow.md
.github/workflows/: ese.yml  portability.yml  pypi-publish.yml  render-deploy.yml  render-depoly.yml  truepresence-tests.yml
apps/: __init__.py
apps/contract_intelligence/: README.md  __init__.py  cli.py
deploy/: Dockerfile  README.md  docker-compose.yaml  fly.toml  railway.json
docs/: CASE_INTELLIGENCE_PLATFORM.md  COMMERCIAL_PACKAGING.md  CONFIG_CONTRACT.md  EXTENSIBILITY.md  PIPELINE_STATE.md  RELEASE.md  ROLE_REPORT_CONTRACT.md  SYSTEMS_APPLICATION_DELIVERY_PLATFORM.md  TROUBLESHOOTING.md  TRUEPRESENCE_AGENTIC_DETECTION.md  TRUEPRESENCE_BROWSER_SDK.md  TRUEPRESENCE_CODEBASE_MAP.md  TRUEPRESENCE_DASHBOARD.md  TRUEPRESENCE_DECISION_ENGINE.md  TRUEPRESENCE_EVIDENCE_ARTIFACTS.md  TRUEPRESENCE_PRIVACY_PRESERVING_SDK_CONTRACT.md  TRUEPRESENCE_REPO_BLUEPRINT.md  TRUEPRESENCE_ROADMAP.md  TRUEPRESENCE_SCORING_MODEL.md  TRUEPRESENCE_SDK_IMPLEMENTATION_BACKLOG.md  TRUEPRESENCE_STARTUP.md  TRUEPRESENCE_TELEGRAM_COMMUNITY_SIGNALS.md  TRUEPRESENCE_TELEGRAM_SAFETY.md  TRUEPRESENCE_TESTING_HARNESS.md  TRUEPRESENCE_V1_ARCHITECTURE.md  TRUEPRESENCE_V1_ISSUE_REGISTER.md  openapi.yaml  telegram_production_readiness_assessment.md
docs/adr/: ADR-001-ESE-Instantiation-Protocol.md
docs/protocols/: EIP.md
ese/: __init__.py  adapters.py  application_bundles.py  artifact_views.py  bundle_sdk.py  cli.py  config.py  config_packs.py  dashboard.py  doctor.py  extension_contracts.py  extensions.py  framework_defaults.py  init_wizard.py  integrations.py  local_runtime.py  pack_sdk.py  pipeline.py  policy_checks.py  pr_review.py  repo_context.py  report_exporters.py  reports.py  role_drafting.py  starter_sdk.py  templates.py
ese_core/: __init__.py  engine.py
examples/browser-sdk/: basic-form.html
examples/demo/: index.html
examples/release_integration_plugin/: README.md  pyproject.toml
examples/release_ops_pack/: README.md  pyproject.toml
examples/release_ops_pack/src/release_ops_pack/: __init__.py  ese_pack.yaml  pack.py
examples/release_ops_pack/src/release_ops_pack/prompts/: release_planner.md  release_reviewer.md
migrations/: env.py
migrations/versions/: 589e8232c19f_baseline.py  7c2e4d91a8b3_sdk_evidence_artifacts.py  a1c9f4e2b8d1_add_admin_user_role.py
onedrive-cleaner/: app.py  auth.py  cleanup.py  ocr.py  pyproject.toml  requirements.txt  setup.sh  start.command
onedrive-cleaner/onedrive_cleaner/: __main__.py  cleanup.py  scanner.py
sdk/: index.js
sdk/javascript/: index.js
sdk/python/: truepresence_sdk.py
starters/architecture_review_starter/: README.md  pyproject.toml
starters/architecture_review_starter/src/architecture_review_starter/: __init__.py  bundle.py  ese_pack.yaml  exporters.py  pack.py  policy.py  views.py
starters/architecture_review_starter/src/architecture_review_starter/prompts/: architecture_analyst.md  migration_reviewer.md
starters/release_governance_starter/: README.md  pyproject.toml
starters/release_governance_starter/src/release_governance_starter/: __init__.py  bundle.py  ese_pack.yaml  integration.py  pack.py  policy.py  views.py
starters/release_governance_starter/src/release_governance_starter/prompts/: release_gatekeeper.md  release_planner.md
tests/: adversarial_test.py  test_adapters.py  test_application_bundles.py  test_artifact_views.py  test_cli.py  test_config.py  test_config_packs.py  test_contract_intelligence_ese_bridge.py  test_contract_intelligence_scaffold.py  test_dashboard.py  test_doctor.py  test_e2e.py  test_init_wizard.py  test_integrations.py  test_pack_sdk.py  test_pipeline.py  test_pipeline_contracts.py  test_policy_checks.py  test_pr_review.py  test_report_exporters.py  test_reports.py  test_role_drafting.py  test_starter_sdk.py  test_templates.py  test_truepresence_architecture.py
tests/browser-sdk/: truepresence-browser-sdk.test.mjs
tests/truepresence/: test_agentic_control_detectors.py  test_api_contracts.py  test_argument_graph_builder.py  test_db_url.py  test_decision_engine_tier0_artifact.py  test_decision_response_runtime_metadata.py  test_deploy_contracts.py  test_deterministic_challenge_mapping.py  test_distributed_runtime.py  test_ese_adapter_and_pack.py  test_evaluation_harness.py  test_evidence_packet_contract.py  test_human_plausibility_detectors.py  test_jwt_secret_required.py  test_sdk_api.py  test_sdk_evidence_artifacts.py  test_sdk_privacy.py  test_sdk_scoring.py  test_session_memory_isolation.py  test_session_reset_isolated.py  test_telegram_adapter_calls_engine.py  test_telegram_adapter_message_features.py  test_telegram_bot_auth_and_webhook.py  test_telegram_bot_review_payload_shape.py  test_telegram_bot_routes.py  test_telegram_bot_tenant_registry.py  test_telegram_community_signals.py  test_telegram_parse_failure_not_silent.py  test_telegram_safety_escalation.py  test_wiring_policy.py
truepresence/: __init__.py  db.py  ese_runtime.py  ese_stream.py  exceptions.py  main.py
truepresence/adapter/: ese_adapter.py  evidence_adapter.py
truepresence/adapters/: telegram.py  telegram_bot.py  telegram_models.py
truepresence/adaptive/: __init__.py  bandit.py  reward.py  weighting.py
truepresence/agents/: council.py
truepresence/api/: __init__.py  auth.py  legacy_rest_auth.py  rate_limit.py  server.py  (+1 more)
(+173 files in other folders)
