[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truepresence-ese"
version = "1.0.0"
description = "TruePresenceESE - Telegram Bot Detection System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "questionary>=2.0",
  "PyYAML>=6.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-telegram-bot>=21.2",
  "redis>=5.2",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "orjson>=3.11.6",
  "aiohttp>=3.13.4",
  "numpy>=1.26",
  "tenacity>=9.0",
  "psycopg2-binary>=2.9",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.22",
  "httpx>=0.28",
  "gunicorn>=23.0",
  "requests>=2.33.0",
  "certifi>=2025",
  "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.4",
  "mypy>=1.11",
]

[project.scripts]
truepresence = "truepresence.main:main"
ese = "ese.cli:app"

[tool.setuptools.packages.find]
include = ["truepresence*", "ese*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_configs = true
pretty = true
